deploy/k8s/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: minerva-system.io
      http:
        paths:
          - path: /api(.*)
            pathType: Prefix
            backend:
              service:
                name: rest-svc
                port:
                  number: 9000
